# Umbra

./: README.md
client/: crypto.ts  payment-requests.ts
contracts/: EncryptedContacts.sol  PrivateUTXOLedger.sol
core/: Cargo.toml
core/src/: deposit_withdraw.rs  encrypted_note.rs  encryption.rs  guest.rs  ledger.rs  lib.rs  main.rs  merkle.rs  note.rs  sp1_types.rs  transaction_builder.rs  tx_metadata.rs
zkvm/: Cargo.toml
zkvm/src/: main.rs
